# weaklink

./: Cargo.toml  Cross.toml  README.md
.github/workflows/: CI.yml
examples/dump_exports/: Cargo.toml
examples/dump_exports/src/: main.rs
examples/dump_imports/: Cargo.toml
examples/dump_imports/src/: main.rs
examples/exporter/: Cargo.toml
examples/exporter/src/: lib.rs
examples/importer/: Cargo.toml
examples/importer/src/: lib.rs
examples/utils/: Cargo.toml
examples/utils/src/: lib.rs
examples/weak_linkage/: Cargo.toml  build.rs
examples/weak_linkage/src/: main.rs
weaklink/: Cargo.toml
weaklink/src/: group.rs  lib.rs  loading.rs
weaklink_build/: Cargo.toml  README.md
weaklink_build/src/: exports.rs  imports.rs  lib.rs  util.rs
weaklink_build/src/stub_gen/: aarch64.rs  arm.rs  loongarch.rs  mod.rs  x64.rs
